<resources>
  <string name="app_name">iScream</string>
  <string name="action_settings">Settings</string>
  <string name="username_placeholder">username</string>
  <string name="email_placeholder">user@server.com</string>
  <string name="password_placeholder">P@ssw0rd</string>
  <string name="name_placeholder">Name</string>
  <string name="confirm_placeholder">Confirm Password</string>
  <string name="phone_placeholder">+91-9876543210</string>

  <string name="facebook_app_id">1915688178711068</string>
  <string name="fb_login_protocol_scheme">fb1915688178711068</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
