<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".login.SignUpActivity">

  <ScrollView
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <android.support.v7.widget.CardView
        android:id="@+id/name_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6sp"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/name_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/username_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_card"
        android:layout_margin="6sp"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/username_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textVisiblePassword|textNoSuggestions"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/password_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_card"
        android:layout_margin="6sp"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/password_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/confirm_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_card"
        android:layout_margin="6sp"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/confirm_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/email_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_card"
        android:layout_margin="6sp"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/email_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/phone_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_card"
        android:layout_margin="6sp"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/phone_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_placeholder"
            android:imeOptions="actionDone"
            android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>
    </RelativeLayout>
  </ScrollView>

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/sign_up"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end|bottom"
    android:layout_margin="16dp"
    app:borderWidth="0dp"
    app:ico_color="@color/icons"
    app:ico_icon="gmd-person-add"
    app:ico_size="48dp"
    app:layout_anchor="@+id/phone_card"
    app:layout_anchorGravity="bottom|end|right"
    app:tabGravity="fill"
    app:tabMode="scrollable"/>
</android.support.design.widget.CoordinatorLayout>
