<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".login.ProfileActivity">

  <ProgressBar
    android:id="@+id/progress_bar"
    style="?android:attr/progressBarStyleLargeInverse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:indeterminate="true"
    android:visibility="invisible"/>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="192sp"
        app:ico_icon="gmd-account-circle"
        app:ico_size="48dp"/>

      <android.support.v7.widget.CardView
        android:id="@+id/username_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/photo"
        android:layout_margin="6sp"
        android:layout_toEndOf="@id/photo"
        android:layout_toRightOf="@id/photo"
        app:cardBackgroundColor="@color/primary"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/username_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/username_placeholder"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textVisiblePassword|textNoSuggestions"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/name_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photo"
        android:layout_margin="6sp"
        app:cardBackgroundColor="@color/primary"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/name_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/name_placeholder"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/password_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_card"
        android:layout_margin="6sp"
        app:cardBackgroundColor="@color/primary"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/password_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/password_placeholder"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/email_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_card"
        android:layout_margin="6sp"
        app:cardBackgroundColor="@color/primary"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/email_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/email_placeholder"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
        android:id="@+id/phone_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_card"
        android:layout_margin="6sp"
        app:cardBackgroundColor="@color/primary"
        app:cardElevation="6sp">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/phone_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/phone_placeholder"
          app:hintAnimationEnabled="true">

          <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>
      </android.support.v7.widget.CardView>
    </RelativeLayout>
  </ScrollView>

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/link_facebook"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="start|bottom"
    android:layout_margin="16dp"
    android:clickable="true"
    app:backgroundTint="@color/facebook"
    app:borderWidth="0dp"
    app:ico_icon="faw-facebook"
    app:ico_size="48dp"
    app:layout_anchor="@+id/phone_card"
    app:layout_anchorGravity="bottom|start|left"
    app:pressedTranslationZ="12dp"
    app:tabGravity="fill"
    app:tabMode="scrollable"/>

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/link_twitter"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end|bottom"
    android:layout_margin="16dp"
    android:clickable="true"
    app:backgroundTint="@color/twitter"
    app:borderWidth="0dp"
    app:ico_icon="faw-twitter"
    app:ico_size="48dp"
    app:layout_anchor="@+id/link_facebook"
    app:layout_anchorGravity="end|right"
    app:pressedTranslationZ="12dp"
    app:tabGravity="fill"
    app:tabMode="scrollable"/>

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/add_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end|bottom"
    android:layout_margin="16dp"
    android:clickable="true"
    android:visibility="gone"
    app:borderWidth="0dp"
    app:ico_color="@color/primary"
    app:ico_icon="gmd-edit"
    app:ico_size="48dp"
    app:layout_anchor="@+id/phone_card"
    app:layout_anchorGravity="bottom|end|right"
    app:pressedTranslationZ="12dp"
    app:tabGravity="fill"
    app:tabMode="scrollable"/>

</android.support.design.widget.CoordinatorLayout>
